Resolved Release 0.1 Bugs

--- a/lib/multiple-date-picker.less
+++ b/lib/multiple-date-picker.less
@@ -13,7 +13,7 @@
 @pickable-day-picked-background: #C6000B;
 @pickable-day-picked-color: #fff;
 
-.picker-days-week-row .weekday-header:hover {
+.picker-days-week-row .weekday-header.active:hover {
   cursor: pointer;
   background-color: @pickable-day-picked-background;
   color: @pickable-day-picked-color;
